test-app/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: demo
  labels:
    app: hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: echo-server
        image: ealen/echo-server:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: demo
spec:
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  ipFamilies:
  - IPv6
  selector:
    app: hello
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
